[workspace]
members = ["utils", "db"]
resolver = "2"


[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Rick-29 <ayfmportner@gmail.com>"]
repository = "https://github.com/Rick-29/tenacity-crates.git"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "v5", "zerocopy", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

# Add other common dependencies here
