[package]
name = "tenacity-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

toasty = { git = "https://github.com/tokio-rs/toasty.git", features = ["sqlite"] }
toasty-driver-sqlite = { git = "https://github.com/tokio-rs/toasty.git"  }
tracing = "0.1.40"

