[package]
name = "tenacity-utils"
version.workspace = true
edition.workspace = true

[features]
default = ["wasm"]
ai = ["dep:burn", "dep:bincode"]
db = ["dep:tenacity-db"]
logging = ["dep:tracing-subscriber"]
models = ["dep:chrono", "dep:uuid", "dep:utoipa", "dep:bincode", "dep:tokio"]
api = ["dep:tokio"]
domains = ["dep:tokio"]
license = ["dep:tokio"]
emoji = ["dep:tokio"]
handler = ["dep:tokio"]
credentials = ["dep:tokio"]
helper = []
wasm = [
    "dep:rand_chacha",
    "dep:uuid",
    "dep:chrono",
    "dep:magic-crypt",
    "dep:bincode",
    "dep:async-trait",
    "dep:async-stream",
    "dep:futures-util",
    "dep:argon2",
    "dep:thiserror",
    "dep:aes-gcm",

    "helper",
]
security = [
    "dep:rand_chacha",
    "dep:uuid",
    "dep:chrono",
    "dep:axum",
    "dep:hyper",
    "dep:magic-crypt",
    "dep:bincode",
    "dep:utoipa",
    "dep:tokio",
    "dep:async-trait",
    "dep:async-stream",
    "dep:futures-util",
    "dep:argon2",
    "dep:thiserror",
    "dep:aes-gcm",

    "logging",
    "helper",
]
tenacity-handler = ["ai", "models", "handler", "emoji", "db"]
all = [
    "ai",
    "models",
    "api",
    "domains",
    "license",
    "emoji",
    "handler",
    "credentials",
    "security",
    "logging",
    "helper",
    "db",
]

[dependencies]
anyhow.workspace = true
uuid = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

notify = "8.0.0"
once_cell = "1.19.0"
rand = "0.9.0"
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"

burn = { version = "0.17.1", default-features = false, features = [
    "std",
    "ndarray",
], optional = true }
rand_chacha = { version = "0.9.0", optional = true }
axum = { version = "0.8.3", default-features = false, optional = true }
hyper = { version = "1.4.1", optional = true }
magic-crypt = { version = "4.0.1", optional = true }
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
bincode_derive = { version = "2.0.1" }
utoipa = { version = "5.1.1", features = ["chrono", "uuid"], optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }

async-stream = { version = "0.3.6", optional = true }
async-trait = { version = "0.1.83", optional = true }
futures-util = { version = "0.3.31", optional = true }

tenacity-db = { path = "../db", optional = true }
bytes = "1.8.0"
argon2 = { version = "0.5.3", optional = true }
thiserror = { version = "2.0.12", optional = true }
aes-gcm = { version = "0.10.3", optional = true }
cipher = "0.4.4"
aead = { version = "0.5.2", features = ["stream"] }


[dev-dependencies]
tokio.workspace = true
tokio-util = { version = "0.7.12", features = ["io"] }
reqwest = { version = "0.12.15", features = ["stream"] }
